# lesson-11/src/swagger/swagger.json
@@ -43,7 +43,8 @@
 					},
 					"userId": {
 						"type": "number",
-						"format": "double"
+						"format": "double",
+						"nullable": true
 					},
 					"createdAt": {
 						"type": "string"
@@ -57,6 +58,7 @@
 					"title",
 					"status",
 					"priority",
+					"userId",
 					"createdAt",
 					"updatedAt"
 				],
@@ -222,7 +224,8 @@
 					},
 					"userId": {
 						"type": "number",
-						"format": "double"
+						"format": "double",
+						"nullable": true
 					}
 				},
 				"type": "object",
@@ -257,11 +260,14 @@
 					"content": {
 						"type": "string"
 					},
-					"userId": {
+					"actorUserId": {
 						"type": "number",
 						"format": "double"
 					}
 				},
+				"required": [
+					"actorUserId"
+				],
 				"type": "object",
 				"additionalProperties": false
 			}
@@ -382,8 +388,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				]
@@ -412,8 +417,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				],
@@ -432,7 +436,7 @@
 				"operationId": "DeleteUser",
 				"responses": {
 					"204": {
-						"description": "No content"
+						"description": "No Content"
 					}
 				},
 				"tags": [
@@ -445,8 +449,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				]
@@ -494,6 +497,14 @@
 					{
 						"in": "query",
 						"name": "title",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "userId",
 						"required": false,
 						"schema": {
 							"type": "string"
@@ -557,8 +568,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				]
@@ -587,8 +597,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				],
@@ -607,7 +616,7 @@
 				"operationId": "DeleteTask",
 				"responses": {
 					"204": {
-						"description": "No content"
+						"description": "No Content"
 					}
 				},
 				"tags": [
@@ -620,8 +629,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				]
@@ -732,8 +740,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				]
@@ -762,8 +769,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				],
@@ -782,7 +788,7 @@
 				"operationId": "DeletePost",
 				"responses": {
 					"204": {
-						"description": "No content"
+						"description": "No Content"
 					}
 				},
 				"tags": [
@@ -795,8 +801,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				]
